syntax = "proto3";

package user;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/zeuge/hw-go/05-crud/pkg/grpc/user;user";

service UserService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc GetAll(google.protobuf.Empty) returns (GetAllResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum Role {
    GUEST = 0;
    ADMIN = 1;
    USER = 2;
}

message User {
    string uuid = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CreateRequest {
    string name = 1;
    string email = 2;
    Role role = 3;
}

message CreateResponse {
    User user = 1;
}

message GetRequest {
    string uuid = 1;
}

message GetResponse {
    User user = 1;
}

message GetAllResponse {
    repeated User users = 1;
}

message DeleteRequest {
    string uuid = 1;
}
